src/webnotification/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnotification
  labels:
    app: stock-trader
  annotations:
    prism.subkind: "Node.js"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnotification
      version: v1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: webnotification
        version: v1
    spec:
      containers:
      - name: webnotification
        image: stocktradersjilv2/webnotification:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 3001
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
