src/webnotification/manifest/service.yml
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: webnotification-service
  labels:
    app: webnotification
    solution: stock-trader
spec:
  type: NodePort 
  ports:
    - port: 3001
      nodePort: 31003
      targetPort: 3001
      name: https
  selector:
    app: webnotification
